--- a/working/index.html
+++ b/working/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
+    <script src="code/Countdown.js"></script>
     <script src="code/chapter/16_game.js"></script>
     <script src="code/levels.js"></script>
     <script src="code/chapter/17_canvas.js"></script>
@@ -9,9 +10,11 @@
   <body>
     <h1>Roadcone Rampage</h1>
     <script>
-      runGame(GAME_LEVELS, CanvasDisplay);
+      var countdown = new Countdown()
+      runGame(GAME_LEVELS, CanvasDisplay, countdown);
     </script>
     <h2>Score: 0</h2>
-    <h2>Time Remaining: 0 seconds</h2>
+    <h2 id='countdown'>Time remaining: 180 seconds</h2>
+    <h2 id='status'></h2>
   </body>
 </html>
