--- a/working/index.html
+++ b/working/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
+    <script src="code/Counter.js"></script>
     <script src="code/Countdown.js"></script>
     <script src="code/chapter/16_game.js"></script>
     <script src="code/levels.js"></script>
@@ -13,8 +14,11 @@
       var countdown = new Countdown()
       runGame(GAME_LEVELS, CanvasDisplay, countdown);
     </script>
-    <h2>Score: 0</h2>
-    <h2 id='countdown'>Time remaining: 180 seconds</h2>
-    <h2 id='status'></h2>
+    <h2 id='score'>Score: 0</h2>
+    <h2 id='countdown'>Time Remaining: 180 seconds</h2>
+    <script>
+      scoreElement = document.getElementById('score')
+      var score = new Counter(scoreElement, 'Score: ')
+    </script>
   </body>
 </html>
